# simple-haskell-parser

./: README.md  cabal.project.freeze  cabal.project.local  flake.nix  simple-haskell-parser.cabal
src/: Main.hs
test/: IndentTests.hs  Main.hs
