cabal-version: >=1.10
name:          simple-haskell-parser
version:       1.0.0.2
license:       BSD3
license-file:  LICENSE
author:        Perigord Truffle
maintainer:    perigordtruffle7318@gmail.com
bug-reports:   mailto:marlowsd@gmail.com
homepage:      http://www.haskell.org/hello/
category:      Language
build-type:    Simple
description: A test haskell Parser

test-suite simple-haskell-parser-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
      base            >=4.9 && <5
    , hspec
    , megaparsec
    , QuickCheck
    , random
  ghc-options:      -threaded -Wall -Wcompat
  other-modules: IndentTests
  default-language: Haskell2010

executable simple-haskell-parser
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:
      base              >=4.9     && <5
    , containers
    , mtl
    , parsec
    , template-haskell

  ghc-options:      -threaded -Wall -Wcompat
  default-language: Haskell2010
